@@ -13,6 +13,7 @@
 		}
 	</style>
 	<script src="source/Util.js"></script>
+	<script src="source/Queue.js"></script>
 	<script src="source/Entity.js"></script>
 	<script src="source/Entities/Player.js"></script>
 	<script src="source/Entities/HurtBox.js"></script>
